<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:padding="10dp"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/home_bubble"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/post_bubble"
                android:background="@drawable/header_cercle"
                android:backgroundTint="@color/orange" />

            <TextView
                android:id="@+id/home_post_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:hint="@string/title"
                android:layout_toStartOf="@+id/home_post_state"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@id/home_post_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/state"/>

            <TextView
                android:id="@+id/home_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_post_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/home_post_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_post_description"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/home_post_phone"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@id/home_post_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_post_description"
                android:layout_alignParentEnd="true"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!--<Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_post_email"
                android:layout_alignParentEnd="true"
                android:text="P.Number" />-->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_blue"
            android:padding="20dp">

            <TextView
                android:id="@+id/home_post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/home_post_location"
                android:hint="@string/name"
                android:textColor="@color/primary_color"
                android:textColorHint="@color/primary_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/home_post_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/location"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>