<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#082032"
    tools:context=".MainActivity">

    <!--Colors:
                main dark blue: #082032
                light blue sec: #2C394B
                extra light blue: #223756
                orange: #FF4C29
                glassy white: #F6FEFF
                -->
    <ImageView
        android:id="@+id/background"
        android:layout_width="682dp"
        android:layout_height="524dp"
        android:layout_marginTop="264dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/zole_logo"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zole_logo" />

    <TextView
        android:id="@+id/recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/recover"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="361dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/recover_desc"
        android:textAllCaps="false"
        android:textColor="@color/extra_light_blue"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/recover_password"
        app:layout_constraintStart_toStartOf="@+id/recover_password"
        app:layout_constraintTop_toBottomOf="@+id/recover_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/email"
        android:textColorHint="@color/extra_light_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_color"

        />

    <Button
        android:id="@+id/send"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/extra_light_blue"
        android:fontFamily="@font/nunito_bold"
        android:onClick="loginActivity"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="163dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/nunito_regular"
        android:onClick="SignupActivity"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/extra_light_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/send"
        app:layout_constraintStart_toStartOf="@+id/send"
        app:layout_constraintTop_toBottomOf="@+id/send" />


</androidx.constraintlayout.widget.ConstraintLayout>